# Sentinel-HealOps

./: .gitignore  CMakeLists.txt  README.md
brain/: main.py  model.py
brain/models/: classifier.pkl
dashboard/: app.py
docs/: brain_walkthrough.md  detector_walkthrough.md  governor_walkthrough.md  interceptor_main_walkthrough.md  learning_guide.md  orderbook_walkthrough.md
docs/reference_assets/: CMakeLists.txt  doc1.txt  doc2.txt  doc3.txt
engine/: CMakeLists.txt
engine/include/: Logger.h  Order.h  OrderBook.h
engine/src/: Logger.cpp  OrderBook.cpp  main.cpp
governor/: action-webhook.py  engine-deployment.yaml  sentinelarc-deployment.yaml  target-deployment.template.yaml  targets.json
interceptor/: CMakeLists.txt
interceptor/include/: Anomaly.h  ZScoreDetector.h
interceptor/src/: ZScoreDetector.cpp  main.cpp
scripts/: http_probe_adapter.py  load_generator.py  sentinelarc_adapter.py  test_remediation_layer.sh
