cmake_minimum_required(VERSION 3.20)
project(SentinelHealOps VERSION 1.0 LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

# Add subdirectories as they are implemented
# add_subdirectory(engine)
# add_subdirectory(interceptor)

message(STATUS "Sentinel-HealOps Project Initialized")
